# sdlc-kit

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PRIVACY.md  README.md  install.ps1  install.sh  pyproject.toml  uninstall.ps1  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
assets/vault-tree/: CLAUDE.md.tpl  _INDEX.md.tpl  dashboard.html
core/: cli.py  frontmatter.py  git.py  i18n.py  paths.py  scanner.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PUBLISHING.md  TESTING.md  _pending-v0.4.0-cleanup.md
docs/decisions/: ADR-0001-estrutura-canonica.md  ADR-0002-skills-inventory.md  ADR-0003-test-strategy-tdd-pbt.md  ADR-0004-i18n-strategy.md
plugins/core/: README.md
plugins/extended/: README.md
scripts/: audit_registry.py  bump_version.py  refactor_skill_imports.py
skills/sdlc-adr/: SKILL.md
skills/sdlc-api/: SKILL.md
skills/sdlc-c4/: SKILL.md
skills/sdlc-dash/: SKILL.md
skills/sdlc-design-system/: SKILL.md
skills/sdlc-doc/: SKILL.md
skills/sdlc-domain/: SKILL.md
skills/sdlc-epic/: SKILL.md
skills/sdlc-impact/: SKILL.md
skills/sdlc-init/: SKILL.md
skills/sdlc-milestone/: SKILL.md
skills/sdlc-prd/: SKILL.md
skills/sdlc-retro/: SKILL.md
skills/sdlc-review/: SKILL.md
skills/sdlc-spec/: SKILL.md
skills/sdlc-status/: SKILL.md
skills/sdlc-steer/: SKILL.md
skills/sdlc-sync/: SKILL.md
skills/sdlc-task/: SKILL.md
tests/: __init__.py  _skill_helpers.py  conftest.py  sitecustomize.py  test_adr_skill.py  test_api_skill.py  test_cli.py  test_dash_skill.py  test_db.py  test_doc_skill.py  test_epic_skill.py  test_frontmatter.py  test_git.py  test_hook_post_vault_write.py  test_i18n.py  test_incident_skill.py  test_init_detect.py  test_init_scaffold.py  test_milestone_skill.py  test_parser.py  test_paths.py  test_phase4_skills.py  test_phase5_skills.py  test_prd_skill.py  test_regexes.py  test_review_skill.py  test_scanner.py  test_spec_skill.py  test_status_skill.py  test_steer_skill.py  test_sync_skill.py  test_task_skill.py  test_trd_skill.py
(+158 files in other folders)
